# SimpleAllocatorLab

./: CMakeLists.txt  main.cpp  memorypage.cpp  memorypage.h  memoryrange.cpp  memoryrange.h  simpleallocator.cpp  simpleallocator.h
lab1/: CMakeLists.txt  blockalignutils.cpp  blockalignutils.h  main.cpp  memorypage.cpp  memorypage.h  memoryrange.cpp  memoryrange.h  simpleallocator.cpp  simpleallocator.h
lab1/common/: abstractallocator.cpp  abstractallocator.h  allocatedblock.cpp  allocatedblock.h  blockalignutils.cpp  blockalignutils.h  memorymanager.h  memorymanager.hpp  memorypage.h  memorypage.hpp  memoryrange.cpp  memoryrange.h
lab2/: CMakeLists.txt  blockmemoryrange.cpp  blockmemoryrange.h  classifiedallocator.cpp  classifiedallocator.h  classifiedmemorypage.cpp  classifiedmemorypage.h  main.cpp  pageinfo.h
